Fixed the Menu's CSS.
It now matches the spooks theme, and it's done to your specs. Unless your screen has a built in grunge filter though, it won't look exactly the same as the PSD. Well, we could use image files, but those are bloat.

--- a/public/css/client.css
+++ b/public/css/client.css
@@ -617,6 +617,10 @@ color:gold;
     color:white;
     display:none;
     border-radius:5px;
+    box-shadow: rgba(255, 255, 255, 0.1) 0 1px 0, 
+    		rgba(0, 0, 0, 0.8) 0 1px 7px 0px inset, 
+    		rgba(255,255,255, .2) 0px -1px 0px 0px;
+    border: 4px solid #222;
 }
 
 .tabbed-list{
